--- a/Seismograph/package.json
+++ b/Seismograph/package.json
@@ -3,7 +3,8 @@
   "tag": "NEXGEN",
   "affiliates": [
     "kotv",
-    "kwtv"
+    "kwtv",
+    "qafrankly"
   ],
   "propTypes": {
     "affiliate": "PropTypes.string"
